--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <table cellspacing = "20">
             <tr>
                 <td>
-                    <img src="Profile.png" alt="Profile Picture" width="100" height="100">
+                    <img src="img/Profile.png" alt="Profile Picture" width="100" height="100">
                 </td>
                 <td>
                     <h1>Muhamad Yusuf Irawan Arsyi</h1>
